education_room_service_completed
